--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "mocha": "^10.7.0",
+    "prisma": "^6.12.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.10"
+    "@hapi/hapi": "^21.3.10",
+    "@prisma/client": "^6.12.0"
   }
 }
