--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
-    "@prisma/client": "^6.12.0"
+    "@prisma/client": "^6.12.0",
+    "joi": "^17.13.3"
   }
 }
