--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@swc/core": "^1.7.2",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "mocha": "^10.7.0",
     "prisma": "^6.12.0",
