--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Coding Interview Backend Level 3",
   "main": "src/index.ts",
   "scripts": {
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "test": "npm run test:prepare && cross-env NODE_ENV=test dotenv -e .env.test -- jest",
     "test:prepare": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed",
     "test:unit": "jest tests",
@@ -19,7 +20,9 @@
     "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "mocha": "^10.7.0",
+    "nodemon": "^3.1.10",
     "prisma": "^6.12.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
