--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,10 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-  "remoteUser": "node"
+	"remoteUser": "node",
+	"forwardPorts": [
+		3000
+	],
+	"postCreateCommand": "npm install",
+	"postStartCommand": "npm run dev"
 }
